--- a/responsive.css
+++ b/responsive.css
@@ -22,8 +22,12 @@
 .head-hover {
    display: none;
 }
-.header-left {
-   width: 500px;
+.header-left p h1{
+   width: 443px;
+   height: 500px;
+}
+.share-link {
+   width: 100px;
 }
 .empty {
    width: 530px;
@@ -292,7 +296,7 @@
       padding: 0 0 0 50px;
    }
    .navbar {
-      width: 1100px;
+      width: 500px;
       padding: 0 0 0 50px;
       justify-content: flex-start;
       gap: 80px;
@@ -344,7 +348,7 @@
       justify-content: flex-start;
    }
    .days {
-      width: 80px;
+      width: 60px;
    }
    .blue-btn {
       width: 85px;
@@ -445,16 +449,16 @@
 }
 @media screen and (max-width:480px) {
    .section {
-      width: 480px;
+      width: 460px;
    }
    .upper {
-      padding: 0 0 0 50px;
+      padding: 0 0 0 0;
    }
    .navbar {
-      width: 1100px;
-      padding: 0 0 0 50px;
+      width: 400px;
+      padding: 0 0 0 20px;
       justify-content: flex-start;
-      gap: 80px;
+      gap: 10px;
    } 
    .nav--btn {
       display: none;
@@ -469,8 +473,13 @@
       width: 25px;
    }
    .header {
-      width: 500px;
-      padding: 0 0 0 40px;
+      width: 480px;
+      height: 400px;
+      padding: 0 0 0 0;
+   }
+   .head-informations {
+      width: 470px;
+      height: 430px;
    }
    .header-image {
       display: none;
@@ -479,8 +488,9 @@
       display: none;
    }
    .header-left {
-      width: 550px;
-      padding: 30px 0 30px 30px;
+      width: 430px;
+      height: 350px;
+      padding: 25px 0 25px 25px;
    }
    .empty {
       display: none;
@@ -497,13 +507,15 @@
    .cardimg {
       display: none;
       flex-direction: column;
-   }   
+   }  
+   .title-today {
+      display: none;
+   } 
    .day-pickers p{
-      gap: 5px;
-      justify-content: flex-start;
+      display: none;
    }
    .days {
-      width: 80px;
+      display: none;
    }
    .blue-btn {
       width: 85px;
@@ -513,18 +525,19 @@
    }
    .sheets {
       flex-direction: column;
+      height: 450px;
    }
    .sheet-res {
       width: 300px;
       height: 220px;
    }
    .content {
-      font-size: 14px;
+      font-size: 12px;
       width: 250px;
-      padding-left: 30px;
+      padding-left: 50px;
    }
    .tsaash-btn {
-      width: 640px;
+      width: 370px;
    }
    .bottom-res {
       width: 575px;
@@ -545,10 +558,10 @@
       width: 584px;
    }
    .hev-mayg {
-      padding: 0 0 0 50px;
+      padding: 0 0 0 25px;
    }
    .technology {
-      padding-left: 50px;
+      padding-left: 25px;
       width: 1050px;
    }
    .comic {
@@ -562,26 +575,26 @@
       width: 500px;
    }
    .youtube {
-      width: 650px;
+      width: 400px;
    }
    .yt-cards {
       height: 3000px;
-      width: 600px;
+      width: 360px;
       flex-direction: column;
    }
    .yt-main {
       padding: 0 0 0 50px;
-      width: 650px;
+      width: 400px;
    }
    .youtube-background {
-      width: 700px;
+      width: 460px;
    }
    .yt-card {
-      width: 550px;
+      width: 360px;
       height: 350px;
    }
    .yt-background {
-      width: 550px;
+      width: 350px;
    }
    .footer {
       width: 100%;
@@ -590,20 +603,22 @@
       width: 300px;
       padding-left: 30px;
       flex-direction: column;
+      text-align: center;
    }
    .footer-bottom {
+      justify-content: center;
       width: 300px;
       flex-direction: column;
    }
    .footer-links {
       flex-wrap: wrap;
-      width: 400px;
+      width: 250px;
       flex-direction: column;
    }
    .long-news-right {
       border-right: none;
       padding-left: 30px;
-      width: 1100px;
-      padding: 0 0 0 40px;
+      width: 400px;
+      padding: 0 0 40px 40px;
    }
 }
